kube/whereami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami-service
  labels:
    app: whereami
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: whereami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-deployment
  labels:
    app: whereami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
      - name: frontend
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.8
        ports:
        - containerPort: 8080
