kube/asm-nw-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: whereami-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-vs
spec:
  hosts:
  - "*"
  gateways:
  - whereami-gateway
  http:
  - route:
    - destination:
        host: whereami-service.whereami.svc.cluster.local
        port:
          number: 80
